--- a/app/views/shared/_body_header.html.erb
+++ b/app/views/shared/_body_header.html.erb
@@ -1,6 +1,8 @@
-<div class="row">
-  <div class="col-md-1 col-md-offset-1">
-    <p><%= link_to "Home", root_path, class: "btn btn-default" %></p>
-  </div>
-  <div class="col-md-8">
-    <div class="panel panel-primary">
+<!-- <html> from Rails -->
+  <!-- <body> from Rails, yielding now -->
+    <div class="row">
+      <div class="col-md-1 col-md-offset-1">
+        <p><%= link_to "Home", root_path, class: "btn btn-default" %></p>
+      </div>
+      <div class="col-md-8">
+        <div class="panel panel-primary">
