Changed <title> and home page to reflect new project, updated and ran Rspec (0 failures)

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
       <%= render "shared/body_header" %>
 
       <div class="panel-heading">
-        <h1 class="text-center">Codaisseurify!</h1>
+        <h1 class="text-center">Codaisseurify-II</h1>
       </div>
 
       <div class="panel-body">
