--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -8,27 +8,9 @@
             </div>
           </div>
           <div class="panel-body">
-            <table class="table">
-              <tr>
-                <td style="text-align:center">
-                  <%= link_to "Back",
-                    artists_path,
-                    class: "btn btn-info btn-md" %>
-                </td>
-                <td style="text-align:center">
-                <%= link_to "Update",
-                  edit_artist_path(@artist.id),
-                  class: "btn btn-info btn-md" %>
-                </td>
-                <td style="text-align:center">
-                  <%= link_to "Delete",
-                    artist_path(@artist.id),
-                    method: :delete,
-                    data: { confirm: "Delete artist. Are you sure?" },
-                    class: "btn btn-warning btn-md" %>
-                </td>
-              </tr>
-            </table>
+            <%= link_to "Back to Artists",
+              artists_path,
+              class: "btn btn-info btn-md" %>
           </div>
 
           <div class="panel-body">
@@ -40,18 +22,23 @@
               </tr>
               <% @artist.songs.each do |song| %>
                 <tr>
-                  <td>
+                  <td id="song-<%= song.id %>">
                     <%= song.title %>
                   </td>
                   <td>
                     #<%= song.artist_id %>-<%= song.id %>
                   </td>
                   <td class="text-center">
-                    <%= link_to "Delete",
+                    <a href="#"
+                      id="song-delete-<%= song.id %>"
+                       class="btn btn-warning">
+                       Delete
+                    </a>
+                    <!-- < %= link_to "Delete",
                       artist_song_path(song.artist.id, song.id),
                       method: :delete,
                       data: { confirm: "Delete song. Are you sure?" },
-                      class: "btn btn-warning" %>
+                      class: "btn btn-warning" %> -->
                   </td>
                 </tr>
               <% end %>
@@ -72,9 +59,13 @@
                 </td>
                 <td class="text-center">
                   <div class="actions">
-                    <%= f.submit "Add",
-                        class: "btn btn-success btn-md" %>
-                  </div>
+                    <a href="#" id="add-song" class="btn btn-success btn-md">Add</a>
+                    <!-- < %= f.submit "Add",
+                        class: "btn btn-success btn-md" %> -->
+                    <!-- <div class="actions">
+                       <input type="submit" name="commit" value="Add" class="btn btn-success btn-md" data-disable-with="Add" />
+                     </div> -->
+                </div>
                 </td>
               </tr>
             </table>
