Added app/assets/javascript/artists.js with console.logging .ready()

--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -63,6 +63,7 @@
                 <td>
                   <div class="form-group">
                     <%= f.text_field :title,
+                        id: "new-title",
                         class: "form-control",
                         placeholder: "Title" %>
                   </div>
