Button Add adds to table with click event working on delete button

--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -25,7 +25,7 @@
           </div>
 
           <div class="panel-body">
-            <table class="table">
+            <table id="song-table" class="table">
               <tr>
                 <th>Title</th>
                 <th>#</th>
